RESOLVED FIXED24494
crash when deleting at end of document and merging paragraphs
https://bugs.webkit.org/show_bug.cgi?id=24494
Summary crash when deleting at end of document and merging paragraphs
Darin Adler
Reported 2009-03-10 10:13:00 PDT
We have some crash reports that are due to paragraph merging at the end of a document. Easy to fix.
Attachments
patch (5.28 KB, patch)
2009-03-10 10:18 PDT, Darin Adler
ap: review+
Darin Adler
Comment 1 2009-03-10 10:13:19 PDT
Darin Adler
Comment 2 2009-03-10 10:18:48 PDT
Alexey Proskuryakov
Comment 3 2009-03-10 10:53:05 PDT
Comment on attachment 28438 [details] patch r=me This function looks like a perfect candidate for using an early return.
Darin Adler
Comment 4 2009-03-10 12:32:09 PDT
Note You need to log in before you can comment on or make changes to this bug.